# rs-simple-api

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: prod.yml
migrations/: 20230418001048_create_users.sql
src/: main.rs
