[package]
name = "rs-simple-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["json"] }
tokio = { version = "1", features = ["macros"] }
hyper = { version = "0.14", features = ["full"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "offline"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
dotenvy = "0.15"
tower-http = { version = "0.4", features = ["cors"] }
tower = { version = "0.4", features = ["util"] }

[features]
# Habilitar o modo offline do SQLx
offline = ["sqlx/offline"]

[package.metadata.sqlx]
offline = true

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
